fixed invisible layers issue

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -383,7 +383,8 @@ iframe {
 }
 
 .container-login100 {
-  width: 100%;  
+  width: 60%;  
+  margin: 0 auto;
   min-height: 100vh;
   display: -webkit-box;
   display: -webkit-flex;
